--- a/site1-master/css/style.css
+++ b/site1-master/css/style.css
@@ -1,7 +1,16 @@
 .logo{
-    margin-left: 150px;
+    margin-left: 160px;
 }
 .menu{
-    margin-left: 900px;
+    margin-left: 1070px;
    margin-top: -80px;
+}
+.name{
+    margin-left: 800px;
+    
+
+}
+.text1{
+    margin-top: 284px;
+    margin-right: 371px;
 }
